@@ -8,58 +8,38 @@ import irit.dataset.DatasetManager;
 import irit.output.OutputManager;
 import irit.resource.IRI;
 import irit.resource.Resource;
+import irit.similarity.EmbeddingManager;
 import irit.sparql.SparqlProxy;
-import irit.sparql.exceptions.IncompleteSubstitutionException;
-import irit.sparql.query.exception.SparqlEndpointUnreachableException;
-import irit.sparql.query.exception.SparqlQueryMalFormedException;
 import irit.sparql.query.select.SparqlSelect;
-import net.sourceforge.argparse4j.ArgumentParsers;
-import net.sourceforge.argparse4j.impl.Arguments;
 import net.sourceforge.argparse4j.inf.ArgumentParser;
 import net.sourceforge.argparse4j.inf.ArgumentParserException;
 import net.sourceforge.argparse4j.inf.Namespace;
 import org.apache.jena.rdf.model.RDFNode;
-import java.io.IOException;
-import java.nio.file.Paths;
-import java.util.*;
-import irit.similarity.EmbeddingManager;
 import org.apache.jena.sys.JenaSystem;
+
+import java.util.*;
 
 
 public class ComplexAlignmentGeneration {
 
 
-    public static void main(String[] args) throws SparqlEndpointUnreachableException, SparqlQueryMalFormedException, IOException {
+    public static void main(String[] args) {
         JenaSystem.init();
-        ArgumentParser parser = buildArgumentParser();
+        ArgumentParser parser = RunArgs.buildArgumentParser();
 
         try {
             Namespace res = parser.parseArgs(args);
-            String source = res.get("source");
-            String target = res.get("target");
-            String cqa = res.get("cqa");
-            String range = res.get("range");
-            String output = res.get("output");
-            int maxMatches = res.get("maxMatches");
-            List<String> embeddings = res.get("embeddings");
+            RunArgs runArgs = RunArgs.fromNamespace(res);
 
-            if (embeddings != null) {
-                EmbeddingManager.loadEmbeddings(embeddings);
+
+            if (runArgs.getEmbeddings() != null) {
+                EmbeddingManager.loadEmbeddings(runArgs.getEmbeddings());
             }
 
+            DatasetManager.getInstance().load(runArgs.getSourceName(), runArgs.getSourceEndpoint());
+            DatasetManager.getInstance().load(runArgs.getTargetName(), runArgs.getTargetEndpoint());
 
-            String sourceName = getFileName(source);
-            String targetName = getFileName(target);
-
-            List<SparqlSelect> sparqlSelects = SparqlSelect.load(cqa);
-
-            List<Float> rangeList = parseRange(range);
-
-            DatasetManager.getInstance().load(sourceName, source);
-            DatasetManager.getInstance().load(targetName, target);
-
-
-            run(sourceName, targetName, sparqlSelects, rangeList, maxMatches, false, output);
+            run(runArgs);
 
 
             DatasetManager.getInstance().close();
@@ -67,97 +47,22 @@ public class ComplexAlignmentGeneration {
 
         } catch (ArgumentParserException e) {
             parser.handleError(e);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
         }
 
 
     }
 
 
-    public static ArgumentParser buildArgumentParser() {
-        ArgumentParser parser = ArgumentParsers.newFor("Canard").build()
-                .description("Complex alignment generator.");
-
-        parser.addArgument("source")
-                .type(String.class)
-                .required(true)
-                .help("Source ontology.");
-
-        parser.addArgument("target")
-                .type(String.class)
-                .required(true)
-                .help("Target ontology.");
-
-        parser.addArgument("cqa")
-                .type(String.class)
-                .required(true)
-                .help("CQA folder.");
-
-        parser.addArgument("--range")
-                .type(String.class)
-                .setDefault("0.8")
-                .help("Threshold range.");
-
-        parser.addArgument("--output")
-                .type(String.class)
-                .setDefault("output")
-                .help("Output folder.");
-
-        parser.addArgument("--silent")
-                .type(Boolean.class)
-                .action(Arguments.storeConst())
-                .setConst(true)
-                .setDefault(false)
-                .help("Disable console output.");
-
-        parser.addArgument("--maxMatches")
-                .type(Integer.class)
-                .setDefault(10)
-                .help("Max Matches.");
-
-        parser.addArgument("--embeddings")
-                .type(String.class)
-                .nargs("+")
-                .help("Paths to embeddings files.");
-
-        return parser;
-    }
-
-    public static String getFileName(String path) {
-        String[] split = Paths.get(path).getFileName().toString().split("\\.");
-        return split[0];
-    }
-
-
-    public static List<Float> parseRange(String range) {
-        List<Float> ranges = new ArrayList<>();
-        String[] split = range.split(":");
-
-        float start = Float.parseFloat(split[0]);
-        float end = start;
-        float step = 0.1f;
-
-
-        if (split.length > 1) end = Float.parseFloat(split[1]);
-        if (split.length > 2) step = Float.parseFloat(split[2]);
-
-        ranges.add(start);
-        start += step;
-        for (; start < end; start += step) {
-            ranges.add(start);
-        }
-
-        return ranges;
-    }
-
-
-    public static void run(String sourceEndpoint, String targetEndpoint, List<SparqlSelect> queries, List<Float> th, int maxMatches, boolean reassess, String outputPath) throws SparqlEndpointUnreachableException, SparqlQueryMalFormedException {
+    public static void run(RunArgs runArgs) throws Exception {
 
         OutputManager outputManager = new OutputManager();
-        outputManager.initOutputEdoal(sourceEndpoint, targetEndpoint, th, outputPath);
+        outputManager.initOutputEdoal(runArgs.getSourceName(), runArgs.getTargetName(), runArgs.getThresholds(), runArgs.getOutputPath());
 
 
-        for (SparqlSelect sq : queries) {
-            align(sq, sourceEndpoint, targetEndpoint, maxMatches, reassess, th, outputManager);
+        for (SparqlSelect sq : runArgs.getQueries()) {
+            align(sq, runArgs, outputManager);
         }
 
 
@@ -165,11 +70,11 @@ public class ComplexAlignmentGeneration {
     }
 
 
-    public static void align(SparqlSelect sq, String sourceEndpoint, String targetEndpoint, int maxMatches, boolean reassess, List<Float> th, OutputManager outputManager) throws SparqlEndpointUnreachableException, SparqlQueryMalFormedException {
-        Set<Answer> matchedAnswers = getMatchedAnswers(sq, sourceEndpoint, targetEndpoint, maxMatches);
+    public static void align(SparqlSelect sq, RunArgs runArgs, OutputManager outputManager) throws Exception {
+        Set<Answer> matchedAnswers = getMatchedAnswers(sq, runArgs.getSourceName(), runArgs.getTargetName(), runArgs.getMaxMatches());
 
-        for (float threshold : th) {
-            List<SubgraphForOutput> subgraphForOutputs = buildSingleOutput(matchedAnswers, sq, sourceEndpoint, targetEndpoint, threshold, reassess);
+        for (float threshold : runArgs.getThresholds()) {
+            List<SubgraphForOutput> subgraphForOutputs = buildSingleOutput(matchedAnswers, sq, threshold, runArgs);
             if (!subgraphForOutputs.isEmpty()) {
                 outputManager.addToOutput(threshold, sq, subgraphForOutputs);
             }
@@ -179,14 +84,41 @@ public class ComplexAlignmentGeneration {
     }
 
 
-    public static Set<Answer> getMatchedAnswers(SparqlSelect sq, String sourceEndpoint, String targetEndpoint, int maxMatches) {
-        HashMap<String, IRI> iriList = sq.getIRIList();
+    public static Set<Answer> getMatchedAnswers(SparqlSelect sq, String sourceEndpoint, String targetEndpoint, int maxMatches) throws Exception {
+        Map<String, IRI> iriList = sq.getIRIList();
         for (Map.Entry<String, IRI> m : iriList.entrySet()) {
             m.getValue().retrieveLabels(sourceEndpoint);
         }
 
-        ArrayList<Answer> answers = new ArrayList<>();
-        HashSet<Answer> matchedAnswers = new HashSet<>();
+        List<Answer> answers = new ArrayList<>();
+        Set<Answer> matchedAnswers = new HashSet<>();
+
+        getAnswers(sq, sourceEndpoint, targetEndpoint, maxMatches, matchedAnswers, answers);
+
+
+        answers.sort(Comparator.comparing(Answer::toString));
+
+
+        ensureAnswers(sourceEndpoint, targetEndpoint, maxMatches, matchedAnswers, answers);
+
+        return matchedAnswers;
+    }
+
+    private static void ensureAnswers(String sourceEndpoint, String targetEndpoint, int maxMatches, Set<Answer> matchedAnswers, List<Answer> answers) throws Exception {
+        if (matchedAnswers.isEmpty()) {
+            Iterator<Answer> ansIt = answers.iterator();
+            while (matchedAnswers.size() < maxMatches && ansIt.hasNext()) {
+                Answer ans = ansIt.next();
+                ans.retrieveIRILabels(sourceEndpoint);
+                ans.getSimilarIRIs(targetEndpoint);
+                if (ans.hasMatch()) {
+                    matchedAnswers.add(ans);
+                }
+            }
+        }
+    }
+
+    private static void getAnswers(SparqlSelect sq, String sourceEndpoint, String targetEndpoint, int maxMatches, Set<Answer> matchedAnswers, List<Answer> answers) {
         int offsetMatch = 0;
 
         boolean noMoreSourceAnswers = false;
@@ -226,74 +158,43 @@ public class ComplexAlignmentGeneration {
                 offsetMatch++;
             }
         }
-        answers.sort(Comparator.comparing(Answer::toString));
-        if (matchedAnswers.isEmpty()) {
-            Iterator<Answer> ansIt = answers.iterator();
-            while (matchedAnswers.size() < maxMatches && ansIt.hasNext()) {
-                Answer ans = ansIt.next();
-                ans.retrieveIRILabels(sourceEndpoint);
-                ans.getSimilarIRIs(targetEndpoint);
-                if (ans.hasMatch()) {
-                    matchedAnswers.add(ans);
-                }
-            }
-
-        }
-
-        return matchedAnswers;
     }
 
 
-    private static List<SubgraphForOutput> buildSingleOutput(Set<Answer> matchedAnswers, SparqlSelect sq, String sourceEndpoint, String targetEndpoint, float threshold, boolean reassess) throws SparqlEndpointUnreachableException, SparqlQueryMalFormedException {
+    private static List<SubgraphForOutput> buildSingleOutput(Set<Answer> matchedAnswers, SparqlSelect sq, float threshold, RunArgs runArgs) {
         List<InstantiatedSubgraph> goodSubgraphs = new ArrayList<>();
-
 
         List<Answer> answers = new ArrayList<>(matchedAnswers);
         answers.sort(Comparator.comparing(Answer::toString));
 
         for (Answer ans : answers) {
-            Set<InstantiatedSubgraph> localSubgraphs = ans.findCorrespondingSubGraph(sq, targetEndpoint, threshold);
+            Set<InstantiatedSubgraph> localSubgraphs = ans.findCorrespondingSubGraph(sq, runArgs.getTargetName(), threshold);
             List<InstantiatedSubgraph> instantiatedSubgraphs = new ArrayList<>(localSubgraphs);
             instantiatedSubgraphs.sort(Comparator.comparing(InstantiatedSubgraph::toString));
             goodSubgraphs.addAll(instantiatedSubgraphs);
         }
 
-        ArrayList<SubgraphForOutput> output = new ArrayList<>();
-        for (InstantiatedSubgraph t : goodSubgraphs) {
-            boolean added = false;
-            Iterator<SubgraphForOutput> it = output.iterator();
-            while (it.hasNext() && !added) {
-                SubgraphForOutput subG = it.next();
-                if (t instanceof Triple && subG instanceof TripleSubgraph) {
-                    added = ((TripleSubgraph) subG).addSubgraph((Triple) t);
-                }
-                if (t instanceof Path && subG instanceof PathSubgraph) {
-                    added = ((PathSubgraph) subG).addSubgraph((Path) t);
-                }
-            }
-            if (!added) {
-                if (t instanceof Triple) {
-                    output.add(new TripleSubgraph((Triple) t));
-                }
-                if (t instanceof Path) {
-                    output.add(new PathSubgraph((Path) t));
-                }
-            }
-        }
+        List<SubgraphForOutput> output = getSubgraphForOutputs(goodSubgraphs);
 
-        if (reassess) {
+        if (runArgs.isReassess()) {
             for (SubgraphForOutput s : output) {
-                s.reassessSimilarityWithCounterExamples(sourceEndpoint, targetEndpoint, sq);
+                s.reassessSimilarityWithCounterExamples(runArgs.getSourceName(), runArgs.getTargetEndpoint(), sq);
             }
         }
 
 
         Collections.sort(output);
         output.sort(Comparator.comparing(SubgraphForOutput::toString));
-        ArrayList<SubgraphForOutput> singleOutput = new ArrayList<>();
 
-        if (!output.isEmpty() && output.get(output.size() - 1).getSimilarity() < 0.6 && output.get(output.size() - 1).getSimilarity() > 0.01) {
-            double sim = output.get(output.size() - 1).getSimilarity();
+
+        return getForOutputs(output);
+    }
+
+    private static List<SubgraphForOutput> getForOutputs(List<SubgraphForOutput> output) {
+        List<SubgraphForOutput> singleOutput = new ArrayList<>();
+
+        if (!output.isEmpty() && output.getLast().getSimilarity() < 0.6 && output.getLast().getSimilarity() > 0.01) {
+            double sim = output.getLast().getSimilarity();
             boolean moreCorrespondences = true;
             int i = output.size() - 1;
             while (i >= 0 && moreCorrespondences) {
@@ -311,12 +212,34 @@ public class ComplexAlignmentGeneration {
                 }
             }
         }
-
-
         return singleOutput;
     }
 
-    private static List<Map<String, RDFNode>> loadBinary(String sourceEndpoint, SparqlSelect sq, ArrayList<Answer> answers, String queryLimit) {
+    private static List<SubgraphForOutput> getSubgraphForOutputs(List<InstantiatedSubgraph> goodSubgraphs) {
+        List<SubgraphForOutput> output = new ArrayList<>();
+        for (InstantiatedSubgraph t : goodSubgraphs) {
+            boolean added = false;
+            Iterator<SubgraphForOutput> it = output.iterator();
+            while (it.hasNext() && !added) {
+                SubgraphForOutput subG = it.next();
+                if (t instanceof Triple tp && subG instanceof TripleSubgraph tg) {
+                    added = tg.addSubgraph(tp);
+                } else if (t instanceof Path tp && subG instanceof PathSubgraph tg) {
+                    added = tg.addSubgraph(tp);
+                }
+            }
+            if (!added) {
+                if (t instanceof Triple tp) {
+                    output.add(new TripleSubgraph(tp));
+                } else if (t instanceof Path tg) {
+                    output.add(new PathSubgraph(tg));
+                }
+            }
+        }
+        return output;
+    }
+
+    private static List<Map<String, RDFNode>> loadBinary(String sourceEndpoint, SparqlSelect sq, List<Answer> answers, String queryLimit) {
         List<Map<String, RDFNode>> result = SparqlProxy.query(sourceEndpoint, sq.toUnchangedString() + queryLimit);
         for (Map<String, RDFNode> response : result) {
             String s1 = response.get(sq.getSelectFocus().get(0).replaceFirst("\\?", "")).toString();
@@ -333,11 +256,11 @@ public class ComplexAlignmentGeneration {
         return result;
     }
 
-    private static List<Map<String, RDFNode>> loadUnary(String sourceEndpoint, SparqlSelect sq, ArrayList<Answer> answers, String queryLimit) {
+    private static List<Map<String, RDFNode>> loadUnary(String sourceEndpoint, SparqlSelect sq, List<Answer> answers, String queryLimit) {
         List<Map<String, RDFNode>> result = SparqlProxy.query(sourceEndpoint, sq.toUnchangedString() + queryLimit);
         for (Map<String, RDFNode> response : result) {
-            String s = response.get(sq.getSelectFocus().get(0).replaceFirst("\\?", "")).toString();
-            boolean type = response.get(sq.getSelectFocus().get(0).replaceFirst("\\?", "")).isAnon();
+            String s = response.get(sq.getSelectFocus().getFirst().replaceFirst("\\?", "")).toString();
+            boolean type = response.get(sq.getSelectFocus().getFirst().replaceFirst("\\?", "")).isAnon();
             if (!type) {
                 SingleAnswer singleton = new SingleAnswer(new Resource(s));
                 answers.add(singleton);
